part1/exercise-1.07/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timestamp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timestamp
  template:
    metadata:
      labels:
        app: timestamp
    spec:
      containers:
        - name: timestamp
          image: lapalmerjack/output-reader:v2
          ports:
            - containerPort: 8080
