part1/exercise-1.07/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: logging-svc
spec:
  type: ClusterIP
  selector:
    app: timestamp
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
